Add upload package

--- a/workflow/maven-build.yml
+++ b/workflow/maven-build.yml
@@ -13,6 +13,7 @@ jobs:
 - job: build
   steps:
   - task: Maven@3
+    displayName: 'Maven Package'
     inputs:
       mavenPomFile: 'pom.xml'
       mavenOptions: '-Xmx3072m'
@@ -22,3 +23,13 @@ jobs:
       publishJUnitResults: false
       testResultsFiles: '**/TEST-*.xml'
       goals: 'package'
+
+  - task: CopyFiles@2
+    displayName: 'Copy Files to artifact staging directory'
+    inputs:
+      SourceFolder: '$(System.DefaultWorkingDirectory)'
+      Contents: '**/target/*.?(war|jar)'
+      TargetFolder: $(Build.ArtifactStagingDirectory)
+
+  - upload: $(Build.ArtifactStagingDirectory)
+    artifact: drop
