--- a/workflow/maven-build.yml
+++ b/workflow/maven-build.yml
@@ -31,7 +31,7 @@ stages:
         jdkArchitectureOption: 'x64'
         publishJUnitResults: false
         testResultsFiles: '**/TEST-*.xml'
-        goals: 'package'
+        #goals: 'package'
 
     - task: CopyFiles@2
       displayName: 'Copy Files to artifact staging directory'
