--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.muk</groupId>
 	<artifactId>sample-hello-world</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>SpringBoot Hello-World</name>
 	<description>Demo project for Spring Boot</description>
